[package]
name = "subscription-billing"
version = "0.1.0"
description = "On-chain subscription billing system for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "subscription_billing"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
# Pin to avoid edition2024 incompatibility with SBF toolchain (rustc 1.79)
blake3 = "=1.5.5"
constant_time_eq = "=0.3.1"
